# ocaml-maxflow-project

./: Makefile  answer_graph
graphs/: graph.txt
src/: bipartite_matching.ml  bipartite_matching.mli  dune  ford_fulkerson.ml  ford_fulkerson.mli  ftest.ml  gfile.ml  gfile.mli  graph.ml  money_sharing.ml  money_sharing.mli  mtest.ml  test_bipartite.ml  tools.ml  tools.mli
